--- a/nest-ambassador/package.json
+++ b/nest-ambassador/package.json
@@ -32,12 +32,15 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/faker": "^5.5.9",
     "bcryptjs": "^2.4.3",
+    "cache-manager": "^3.6.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "faker": "^5.5.3",
     "mysql2": "^2.3.3-rc.0",
     "passport-jwt": "^4.0.0",
+    "redis": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
@@ -47,6 +50,7 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/cache-manager": "^3.4.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
